syntax = "proto3";

option csharp_namespace = "Billing.Cashiers.Grpc.Models";

package billing.cashiers;

message Cashier {
  string tenant_id = 1;
  string cashierId = 2;
  string name = 3;
  string email = 4;
}
